[tool.poetry]
name = "pbipinspect"
version = "0.2.0"
description = "Parse, validate and document your Power BI Project"
authors = ["Matheus S. Rodrigues <matheus.srodr@gmail.com>"]
repository = "https://github.com/matheussrod/pbipinspect"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mypy = "^1.13.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
deepdiff = "^8.0.1"
mkdocs-material = "^9.5.48"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"
filterwarnings = [
    "ignore::UserWarning"
]